--- a/services/backendService.yaml
+++ b/services/backendService.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: auth
+  name: books
 spec:
   hosts:
   - "*"
@@ -10,7 +10,7 @@ spec:
   http:
   - match:
     - uri:
-        prefix: /auth
+        prefix: /books
     route:
     - destination:
-        host: auth
+        host: books
